--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="coding-image" src="images/coding.png" alt="coding-image">
         <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>Lorem ipsum dolor sit amet, quis in duis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
         <img class="world-gift" src="https://media.giphy.com/media/1kncvVwp4FclaTt5q6/giphy.gif" alt="world-image">
